--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     type: jsPsychHtmlSliderResponseDisplayValue,
     stimulus: `The duration you select will be displayed here in seconds.`,
     require_movement: true,
+    slider_width: 500,
     min: 1,
     max: 60,
     step:0.1,
